--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,3 +2,4 @@
 # defaults file for ansible-role-slurm-slurm-spank-gpu
 slurm_spank_gpu_dependencies: lua 
 slurm_spank_lua_plugin: slurm-spank-lua-0.39-1.x86_64.rpm
+slurm_gpu_spank_plugin: gpu_cmode.lua
